L10n: ru res update
Ticket: RUBY-37759

Change-Id: Iaef2cd75a9bca8d08bb968308ed604b432ff33ea
Signed-off-by: liuliang6 <liuliang6@letv.com>

--- a/LetvWalletCommon/res/values-ru/cube_ptr_string.xml
+++ b/LetvWalletCommon/res/values-ru/cube_ptr_string.xml
@@ -27,7 +27,7 @@
         <item quantity="one"> секунду назад</item>
         <item quantity="other"> секунды (секунд) назад</item>
     </plurals>
-    <string name="cube_ptr_last_update">Последнее обновление: </string>
+    <string name="cube_ptr_last_update">"Последнее обновление: "</string>
     <string name="cube_ptr_pull_down">Потяните вниз</string>
     <string name="cube_ptr_pull_down_to_refresh">Потяните вниз, чтобы обновить</string>
     <string name="cube_ptr_refresh_complete">Обновлено</string>
