143-wallet: TotalOrderlist: Change theme color
Ticket: XSEVEN-12492

Change-Id: I0c9064cd94b64d43093200fe102ee432af8f6748
Signed-off-by: changjiajie <changjiajie@le.com>

--- a/LetvWallet/res/values/theme.xml
+++ b/LetvWallet/res/values/theme.xml
@@ -28,9 +28,7 @@
     <style name="CouponTheme" parent="AppTheme.Arrow" />
 
     <!-- TotalOrder -->
-    <style name="TotalOrder" parent="AppTheme.Arrow">
-        <item name="walletPrimaryColor">@color/colorMobilePrimary</item>
-    </style>
+    <style name="TotalOrder" parent="AppTheme.Arrow" />
 
     <style name="MovieTheme.MovieListSmallYellow">
         <item name="walletPrimaryColor">@color/movie_schedule_price</item>
