143-wallet: 乐视会员购买
Ticket: LEUI-20465

Signed-off-by: Zhang Huancheng <zhanghuancheng@le.com>

Change-Id: I7ffd5131c9d6ae66a81ff0e627d467461c17194a

--- a/LetvWallet/res/values/dimens.xml
+++ b/LetvWallet/res/values/dimens.xml
@@ -155,4 +155,7 @@
     <dimen name="notify_paddingleft">24dp</dimen>
     <dimen name="notify_paddingright">24dp</dimen>
 
+    <!--member-->
+    <dimen name="member_tab_indicator_height">10px</dimen>
+
 </resources>
