--- a/LetvWallet/res/values/colors.xml
+++ b/LetvWallet/res/values/colors.xml
@@ -130,6 +130,7 @@
     <color name="mobile_tv_secondary_color">#747474</color>
     <color name="colorMobileDivider">#747474</color>
     <color name="colorMobilePrimary">#2BA2FF</color>
+    <color name="colorMemberPrimary">#447DE9</color>
     <color name="mobile_tv_label_color">#747474</color>
     <color name="mobile_history_clear_tv_color">#747474</color>
     <color name="mobile_history_number_tv_color">@android:color/black</color>
@@ -137,4 +138,10 @@
     <color name="mobile_product_tv_color">#747474</color>
     <color name="mobile_product_tv_press_color">@android:color/white</color>
 
+    <!--member-->
+    <color name="member_color_primary">#447DE9</color>
+    <color name="member_color_content_bg">#F7F7F7</color>
+    <color name="member_color_text">#404040</color>
+    <color name="member_color_sub_text">#808080</color>
+    <color name="member_color_to_pay">#FF8A53</color>
 </resources>
