143-wallet: Coupon: 优惠卷详情图标显示不全
Ticket: CORAL-10995

Change-Id: I8ae9812c3cea4bad12810b1cf2fae521d7608042
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LetvWallet/res/layout/coupon_detail_layout.xml
+++ b/LetvWallet/res/layout/coupon_detail_layout.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/img_icon"
                 android:layout_width="@dimen/view_card_icon_size"
                 android:layout_height="@dimen/view_card_icon_size"
-                android:paddingRight="@dimen/view_coupon_icon_margin"
+                android:layout_marginEnd="@dimen/view_coupon_icon_margin"
                 android:alpha="@dimen/le_img_alpha"/>
 
             <LinearLayout
